@startuml 数据库关系图_赛事活动
skinparam backgroundColor #FEFEFE
skinparam defaultFontName Microsoft YaHei
skinparam defaultFontSize 11

title 数据库关系图 - 赛事活动模块

entity "bisai\n比赛表" as BS {
    * id : BIGINT <<PK>>
    saishimingcheng : VARCHAR
    bisaishijian : DATETIME
    bisaididian : VARCHAR
}

entity "bisaibaoming\n比赛报名表" as BSBM {
    * id : BIGINT <<PK>>
    saishimingcheng : VARCHAR <<FK>>
    yonghuzhanghao : VARCHAR <<FK>>
    baomingshijian : DATETIME
    sfsh : VARCHAR
}

entity "huodongxinxi\n活动信息表" as HD {
    * id : BIGINT <<PK>>
    huodongmingcheng : VARCHAR
    huodongshijian : DATETIME
    huodongdidian : VARCHAR
}

entity "baominghuodong\n活动报名表" as BMBD {
    * id : BIGINT <<PK>>
    huodongmingcheng : VARCHAR <<FK>>
    yonghuzhanghao : VARCHAR <<FK>>
    baomingshijian : DATETIME
    sfsh : VARCHAR
}

entity "huiyuan\n会员表" as HY {
    * id : BIGINT <<PK>>
    yonghuzhanghao : VARCHAR <<UK>>
    xingming : VARCHAR
}

entity "discussbisai\n比赛评论表" as DCBS {
    * id : BIGINT <<PK>>
    refid : BIGINT <<FK>>
    userid : BIGINT <<FK>>
    content : TEXT
}

BS ||--o{ BSBM : "1:N 被报名"
BS ||--o{ DCBS : "1:N 被评论"
HD ||--o{ BMBD : "1:N 被报名"
HY ||--o{ BSBM : "1:N 报名"
HY ||--o{ BMBD : "1:N 报名"
HY ||--o{ DCBS : "1:N 评论"

@enduml
